--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <button id="button">進入遊戲</button>
+    <button id="button" class="btn-pos"></button>
     <canvas id="mycanvas" class="canvasSet d-none loadering"></canvas>
 </body>
-<script src="https://pixijs.download/release/pixi.js"></script>
+<script src="/js/pixi.min.js"></script>
 <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
 
 <script type="module">
