--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="button" class="btn-pos"></button>
     <canvas id="mycanvas" class="canvasSet d-none loadering"></canvas>
 </body>
-<script src="/js/pixi.min.js"></script>
+<script src="https://pixijs.download/release/pixi.js"></script>
 <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
 
 <script type="module">
