--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <canvas id="mycanvas" class="canvasSet d-none loadering"></canvas>
 </body>
 <script src="https://pixijs.download/release/pixi.js"></script>
+<script src="https://unpkg.com/@pixi/sound/dist/pixi-sound.js"></script>
 <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
 
 <script type="module">
